Remove warnings from tests